testing custom headers in generaged openapi
