# apim-server/server/api/services/examples.service.ts
@@ -1,41 +1,42 @@
-import pino from 'pino';
 
-const L = pino({
-  name: 'examples',
-  level: 'trace'
-});
+import { EServerStatusCodes, ServerLogger } from '../../common/ServerLogger';
+import ExampleList = Components.Schemas.ExampleList;
 
-let id = 0;
-interface Example {
-  id: number;
-  name: string;
-}
-
-const examples: Example[] = [
-  { id: id++, name: 'example 0' },
-  { id: id++, name: 'example 1' },
+const exampleList: ExampleList = [
+  "example-1",
+  "example-2",
+  "example-3"
 ];
 
+export type TAPSExampleListResponse = { 
+  totalCount: number,
+  list: ExampleList 
+};
+
 export class ExamplesService {
-  all(): Promise<Example[]> {
-    L.info(examples, 'fetch all examples');
-    return Promise.resolve(examples);
-  }
 
-  byId(id: number): Promise<Example> {
-    L.info(`fetch example with id ${id}`);
-    return this.all().then((r) => r[id]);
-  }
-
-  create(name: string): Promise<Example> {
-    L.info(`create example with name ${name}`);
-    const example: Example = {
-      id: id++,
-      name,
-    };
-    examples.push(example);
-    return Promise.resolve(example);
+  public all = async(): Promise<TAPSExampleListResponse> => {
+    return {
+      totalCount: exampleList.length,
+      list: exampleList
+    }
   }
 }
+
+//   byId(id: number): Promise<Example> {
+//     L.info(`fetch example with id ${id}`);
+//     return this.all().then((r) => r[id]);
+//   }
+
+//   create(name: string): Promise<Example> {
+//     L.info(`create example with name ${name}`);
+//     const example: Example = {
+//       id: id++,
+//       name,
+//     };
+//     examples.push(example);
+//     return Promise.resolve(example);
+//   }
+// }
 
 export default new ExamplesService();
